Project

General

Profile

Actions

Bug #8492

closed

ObjectSpace.after_gc_start_hook aborts with GC.stress

Bug #8492: ObjectSpace.after_gc_start_hook aborts with GC.stress

Added by naruse (Yui NARUSE) over 13 years ago. Updated almost 13 years ago.

Status:
Closed
Target version:
ruby -v:
ruby 2.1.0dev (2013-06-05 trunk 41080) [x86_64-freebsd9.1]
[ruby-dev:47400]

Description

以下を実行すると assert(during_gc > 0) に失敗して abort します。
ruby -robjspace -e'ObjectSpace.after_gc_start_hook=proc{};GC.stress=true;{}'
gc.c:3818 の
gc_event_hook(objspace, RUBY_INTERNAL_EVENT_GC_START, 0 /* TODO: pass minor/immediate flag? */);
実行後に、during_gc が 0 になっている模様。

Actions

Also available in: PDF Atom